cache progress and changed id returns to item returns